objects/WT_Goals_Import_Process_Log__c.object
<CustomObject>
    <fields>
        <fullName>Queueable_Job_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Queueable Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Excel_Row_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Excel Row Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Goals Import Process Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Goals Import Process Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals Import Process Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>